kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dcp-ingress
  namespace: dcp

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - host: api.commerce.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway-service

                port:
                  number: 3000

    - host: graphql.commerce.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: graphql-gateway-service

                port:
                  number: 4010
